@@ -1,5 +1,12 @@
 
 --------------------------------------------------------------------------------
+ OSM2World 0.1.3                                                     2011-03-?? 
+--------------------------------------------------------------------------------
+ 
+ * new StreetFurnitureModule
+ 
+ 
+--------------------------------------------------------------------------------
  OSM2World 0.1.2                                                     2011-03-18 
 --------------------------------------------------------------------------------
  
